# TN_compiler_public

./: M_dataset_agg.py  README.md  build_pool_dataset.py  build_pool_dataset_new.py  generate_M_and_dataset.py  generate_groundtruth.py  mps_circ_qiskit.py  pyproject.toml  quantum_unitary.py  target_unitaries1.py  train_ps_brickwork_kak1.py  visualize_circuits.py  visualize_circuits_M.py  visualize_mpsbrick_SU4_qiskit.py  visualize_mpsbrick_ZZising_qiskit.py  visualize_unitaries1.py
output/: (tn_compiler) aninda@LPT-R-QIG-ANIN.txt  mps_cores.npz  pool_D2_n10k.npz  sweep_bond_dim_results.npz  sweep_bond_dim_summary.json  target_unitaries.npz  training_results_mps_kak1_layers_3_10.npz  training_results_mps_kak1_layers_3_10_seq.npz
output/training/: training_results_mps1.npz  training_results_mps_su4_l12.npz  training_results_mps_su4_l3.npz  training_results_mps_su4_l6.npz  training_results_mps_su4_layers_3_10.npz  training_results_mps_zzising.npz
trial/: check_unitary.py  dataset1.py  dataset1_diag.py  dataset1_ising_mps.py  graph_states.py  mpo_circuit.py  mpo_circuit_contracted.py  mps.py  mps_decomp_debug.py  statevector_fidelity.py  tn_compile.py  tn_compile2.py  train_mps1.py  train_mps1_M4.py  train_mps_fide.py  train_mps_final.py  unitaries.py
