[project]
name = "tn-compiler"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "autoray>=0.8.10",
    "cotengra>=0.7.5",
    "matplotlib>=3.10.8",
    "networkx>=3.6.1",
    "numpy>=2.4.4",
    "pylatexenc>=2.10",
    "qiskit>=2.3.1",
    "quimb>=1.13.0",
    "torch>=2.11.0",
]
